# computer_graphics_project

./: .gitignore  CMakeLists.txt  ComputerGraphicsProject.sln  README.md
Assets/MedievalTower/: Credits.txt  tower.mtl  tower2.mtl
Assets/Menu/: road.mtl
Assets/Pirate/: pirate_arm.mtl  pirate_body.mtl  pirate_body_boss.mtl  pirate_left_foot.mtl  pirate_right_foot.mtl
Assets/Terrain/: terrain.mtl
Assets/Treasure/: chest.tga  coin.tga  treasure_chest.mtl
Assets/Various/: cannonball.mtl  health_bar.txt  health_bar_green.mtl  health_bar_red.mtl  heart.mtl  plane_green.mtl  plane_red.mtl  rocket.mtl
ComputerGraphicsProject/: ComputerGraphicsProject.vcxproj  ComputerGraphicsProject.vcxproj.filters  main.cpp
ComputerGraphicsProject/headers/: AudioSystem.h  Cannonball.h  Chest.h  GeometricMesh.h  GeometryNode.h  Menu.h  OBJLoader.h  ParticleSystem.h  Renderer.h  Rocket.h  ShaderProgram.h  Skeleton.h  SpotlightNode.h  TextureManager.h  Tile.h  Tools.h  Tower.h
ComputerGraphicsProject/sources/: AudioSystem.cpp  Cannonball.cpp  Chest.cpp  GeometricMesh.cpp  GeometryNode.cpp  Menu.cpp  OBJLoader.cpp  ParticleSystem.cpp  Renderer.cpp  Rocket.cpp  ShaderProgram.cpp  Skeleton.cpp  SpotlightNode.cpp  TextureManager.cpp  Tile.cpp  Tools.cpp  Tower.cpp
Data/: road.map  road2.map
Data/Knossos/: knossos.mtl
Data/Pirates/: concrete_openfoundation.tga  concrete_openfoundation_n.tga  concrete_openfoundation_s.tga  skeleton.mtl  weight.mtl  wood2.tga
Data/Shaders/: basic_rendering.frag  basic_rendering.vert  particle_rendering.frag  particle_rendering.vert  postproc.frag  (+3 more)
